Criação de geração e validação de CPF

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,10 @@ management:
   health:
     db:
       enabled: true
+vote-session:
+  api-cpf-generator:
+    url: https://gerador.app/api
+    token: Bearer BbjJ1DLBc9b6Qx8cmNggwKQCBlFQRVWO3q0HxFND
 spring:
   application:
     name: vote-session-manager-api
