--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,29 @@ spring:
     add-properties: false
     restart:
       log-condition-evaluation-delta:  false
+  kafka:
+    consumer:
+      group-id: ${spring.application.name}
+      bootstrap-servers: localhost:29092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      max-poll-records: 100
+      auto-offset-reset: earliest
+      properties:
+        schema.registry.url: localhost:29092
+        specific.avro.reader: true
+      listener:
+        ack-mode: BATCH
+        poll-timeout: 10000
+    producer:
+      acks: 1
+      bootstrap-servers: localhost:29092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+      properties:
+        schema.registry.url: localhost:29092
+    topics:
+      result-vote-session: result-vote-session
+    client-id: ${spring.application.name}
 
 swagger:
   message:
@@ -41,6 +64,7 @@ swagger:
     contact:
       name: Fernando meireles
       email: 'fernando.meireles.filho@gmail.com'
+
 datasource:
   driver-class-name: org.h2.Driver
   validation-query: select 1 from dual
